--- a/portfolio-details-agro.html
+++ b/portfolio-details-agro.html
@@ -86,9 +86,29 @@
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga agro - Manifolde Hidraulico.png" alt="">
                 </div>
-
                 <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="assets/img/agro/001T.png" alt="">
+                </div>
+                 <div class="swiper-slide">
+                  <img src="assets/img/agro/Balança jhon deere.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/Balança.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/Bico de plantadeira bocuda.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/Braço articulado reto.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/redutor angular.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/Tampa 805.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/Tampa 806.png" alt="">
                 </div>
 
               </div>
