--- a/portfolio-details-fillers.html
+++ b/portfolio-details-fillers.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Caalga Soluções Industriais</title>
+  <title>Caalga Fillers</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/caalga/favorite icon.png" rel="icon">
-  <link href="assets/img/caalga/favorite icon.png" rel="icon">
+  <link href="assets/img/caalga/logo caalga agro.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -35,7 +35,6 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-
 <body>
 
   <!-- ======= Header ======= -->
@@ -45,104 +44,73 @@
         <div class="logo">
           <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
           <!-- Uncomment below if you prefer to use an image logo -->
-          <a href="index.html"><img src="assets/img/caalga/logo caalga soluções industriais.png" alt="" class="img-fluid"></a>
+          <a href="index.html"><img src="assets/img/caalga/logo caalga agro.png" alt="" class="img-fluid"></a>
         </div>
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a class="nav-link scrollto " href="#hero"></a></li>
+            <li><a class="nav-link scrollto" href="#hero"></a></li>
             <li><a class="nav-link scrollto" href="#about"></a></li>
             <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
-            <li><a class="nav-link scrollto " href="#portfolio">Empresas</a></li>
+            <li><a class="nav-link scrollto" href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#team"></a></li>
         
   </header><!-- End Header -->
-
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
-        <!--<div class="d-flex justify-content-between align-items-center">
-          <h2>Mais sobre a Caalga Soluções Industriais</h2>
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Mais sobre a Caalga Fillers</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfolio Details</li>
           </ol>
-        </div>-->
+        </div>
+
       </div>
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+
         <div class="row gy-4">
+
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes industriais - aplicador adesivo 1.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes industriais - CILINDRO DE PINÇAS ALFA.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes industriais - cilindro de pinças.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes industriais - imagem 008.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes indutrais - filtro A.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes indutriais - cxa dado bier.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga solucoes indutriais - enchedora.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga soluções industriais - CILINDRO ALFA EXPLOSÃO.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/Recravadora_Caalga_4-removebg-preview.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/c1.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/c2.png" alt="">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/c3.png" alt="">
-                </div>
 
+                <div class="swiper-slide">
+                  <img src="assets/img/caalga/caalga agro - Manifolde Hidraulico.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/agro/001T.png" alt="">
+           
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
+
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Embaladoras</h3>
+              <h3></h3>
               <ul>
-                <li><strong>Responsável</strong>: Benilda Matick</li>
-                <li><strong>Telefone</strong>: 3054-1237</li>
-                <li><strong>E-mail</strong>: adm@caalga.com.br</li>
-               <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
+                <li><strong>Responsável</strong>: Gabriel Gnas </li>
+                <li><strong>Telefone</strong>: (45) 99921-7453 </li>
+                <li><strong>E-mail</strong>: agro@caalga.com.br </li>
+                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Sobre</h2>
+              <h2><!--TEXTO SOBRE--></h2>
               <p>
                 <!--INFORMAÇÕES SOBRE A EMPRESA-->
               </p>
             </div>
           </div>
-
         </div>
       </div>
     </section><!-- End Portfolio Details Section -->
