--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     <!--CONTAINER ANIMATION-->
     <!--CONTAINER ANIMATION-->
-    <!--<section id="animation" class="animation">
+    <section id="animation" class="animation">
       <div class="container">
         <div class="col-lg-8 d-flex align-items-stretch">
           <div class="icon-boxes d-flex flex-column justify-content-center">
@@ -180,14 +180,12 @@
               <div class="col-xl-5 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bx align-items-center"></i>
-                    <video autoplay loop poster src="./assets/img/videos/MT Sistema de enchimento FRT268-32-33-21.mp4" width="600" height="300" poster="./assets/img/videos/MT Sistema de enchimento FRT268-32-33-21.mp4" controls> </video>
-                    <h4>TEXTO</h4>
-                  <p>TEXTO</p>
+                    <video autoplay loop poster src="./assets/img/videos/Inovação e tecnologia (1).mp4" width="600" height="300" poster="./assets/img/videos/MT Sistema de enchimento FRT268-32-33-21.mp4" controls> </video>
                 </div>
               </div>
             </div>
           </div>
-      </div> -->
+      </div>
     <!--END CONTAINER ANIMATION-->
     <!--END CONTAINER ANIMATION-->
 
