--- a/index.html
+++ b/index.html
@@ -170,23 +170,9 @@
     </section>
     <!-- End About Section -->
 
+
     <!--CONTAINER ANIMATION-->
-    <!--CONTAINER ANIMATION-->
-    <section id="animation" class="animation">
-      <div class="container">
-        <div class="col-lg-8 d-flex align-items-stretch">
-          <div class="icon-boxes d-flex flex-column justify-content-center">
-            <div class="row">
-              <div class="col-xl-5 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx align-items-center"></i>
-                    <video autoplay loop poster src="./assets/img/videos/Inovação e tecnologia (1).mp4" width="600" height="300" poster="./assets/img/videos/MT Sistema de enchimento FRT268-32-33-21.mp4" controls> </video>
-                </div>
-              </div>
-            </div>
-          </div>
-      </div>
-    <!--END CONTAINER ANIMATION-->
+
     <!--END CONTAINER ANIMATION-->
 
 
@@ -332,7 +318,7 @@
               <li data-filter=".filter-ccs"><b>Caalga</b> Closure System</li>
               <li data-filter=".filter-cf"><b>Caalga</b> Fillers</li>
               <li data-filter=".filter-cl"><b>Caalga</b> labellers</li>
-              <li data-filter=".filter-cls"><b>Caalga</b> liquidi solutions</li>
+              <li data-filter=".filter-cls"><b>Caalga</b> liquid solutions</li>
               <!--CAMPO ADICIONAL-->
             </ul>
             </ul>
@@ -340,7 +326,6 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/caalga/caalga pack - embaladora.JPG" class="img-fluid" alt="">
@@ -433,7 +418,7 @@
           </div>
         </div>
       </div>
-      </div>
+    </div>
       <!-- </div>-->
       <!--</section>-- End Portfolio Section -->
 
