--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -88,12 +88,22 @@
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="" alt="">
-                </div>
-
               </div>
+              
               <div class="swiper-pagination"></div>
+            </div>
+            <div>
+              <h3>Ficha técnica </h3>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação</li>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
+              <li>Tensão alimentação</li>
+              <P></P>
+              <a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -101,16 +111,10 @@
               <h3>Embaladoras</h3>
               <ul>
                 <li><strong>Responsável</strong>: Maurício C Gulgelmin</li>
-                <li><strong>Telefone</strong>: (45) 99112-6240 </li>
+                <li><strong>Telefone</strong>: <a href="https://api.whatsapp.com/send?phone=5545991126240" class="btn-get-started scrollto"> (45) 99112-6240</a> </li>
                 <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
               </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>Sobre</h2>
-              <p>
-                Informações sobre a máquina
-              </p>
             </div>
           </div>
 
