--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -55,7 +57,7 @@
             <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
             <li><a class="nav-link scrollto " href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#team"></a></li>
-        
+
   </header><!-- End Header -->
 
   <main id="main">
@@ -86,38 +88,43 @@
                   <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
+                  <img src="assets/img/caalga/Conjunto Barra Seladora.jpg" alt="">
                 </div>
+
+                <!-- ESPECIFICAÇÕES-->
               </div>
-              
               <div class="swiper-pagination"></div>
             </div>
             <div>
-              <h3>Ficha técnica </h3>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação</li>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação, Tensão alimentação</li>
-              <li>Tensão alimentação</li>
+              <h3>Especificações</h3>
+              <li>Túnel de encolhimento para 1.200 pacotes / hora;</li>
+              <li>Construção mista de aço carbono e aço inox;</li>
+              <li>Ordenador de garrafas automático na entrada da empacotadora;</li>
+              <li>Fácil regulagem para troca de fomratos;</li>
+              <li>01 turbina para circulação de ar forçado no túvel de encolhimento;</li>
+              <li>Fixação das resistências na parte externa do túnel;</li>
+              <li>Controle eletrônico de temperatura;</li>
+              <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
               <P></P>
-              <a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>
+              <!--<a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>-->
+              <!--END ESPECIFICAÇÕES-->
+
+
             </div>
           </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Embaladoras</h3>
               <ul>
-                <li><strong>Responsável</strong>: Maurício C Gulgelmin</li>
-                <li><strong>Telefone</strong>: <a href="https://api.whatsapp.com/send?phone=5545991126240" class="btn-get-started scrollto"> (45) 99112-6240</a> </li>
+                <li><strong>Responsável</strong>: Maurício C Gugelmin</li>
+
+                <li class strong>Telefone</strong>: <a href="https://api.whatsapp.com/send?phone=5545991126240"
+                    class="btn-get-started scrollto"> (45) 99112-6240</a> </li>
                 <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
-               <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
+                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
               </ul>
             </div>
           </div>
-
         </div>
       </div>
     </section><!-- End Portfolio Details Section -->
@@ -142,31 +149,32 @@
             </p>
           </div>
 
-    <div class="container d-md-flex py-4">
+          <div class="container d-md-flex py-4">
 
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-    </div>
+            <div class="me-md-auto text-center text-md-start">
+              <div class="copyright">
+                &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
+              </div>
+              <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/ -->
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              </div>
+            </div>
+            <div class="social-links text-center text-md-right pt-3 pt-md-0">
+              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
+          </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
@@ -181,4 +189,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
