--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/caalga/favorite icon.png" rel="icon">
-  <link href="assets/img/caalga/closure logo.png" rel="icon">
+  <!--<link href="assets/img/caalga/favorite icon.png" rel="icon">-->
+  <!--<link href="assets/img/caalga/closure logo.png" rel="icon">-->
 
   <!-- Google Fonts -->
   <link
@@ -172,7 +172,6 @@
 
 
     <!--CONTAINER ANIMATION-->
-
     <!--END CONTAINER ANIMATION-->
 
 
@@ -293,7 +292,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </section>
     <!-- End Services Section -->
@@ -331,10 +329,10 @@
               <img src="assets/img/caalga/caalga pack - embaladora.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Caalga Pack</h4>
-                <p></p>
+                <p>Embaladoras</p>
                 <div class="portfolio-links">
                   <a href="assets/img/caalga/caalga pack - embaladora.JPG" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                    class="portfolio-lightbox" title="Embaladoras"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details-pack.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
