--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -76,6 +76,8 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
+
+    <!--SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
@@ -87,9 +89,7 @@
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
                 </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/Conjunto Barra Seladora.jpg" alt="">
-                </div>
+                
 
                 <!-- ESPECIFICAÇÕES-->
               </div>
