--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -88,29 +88,46 @@
 
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
+                  <div>
+                    <h3>Especificações</h3>
+                    <li>Túnel de encolhimento para 1.200 pacotes / hora;</li>
+                    <li>Construção mista de aço carbono e aço inox;</li>
+                    <li>Ordenador de garrafas automático na entrada da empacotadora;</li>
+                    <li>Fácil regulagem para troca de fomratos;</li>
+                    <li>01 turbina para circulação de ar forçado no túvel de encolhimento;</li>
+                    <li>Fixação das resistências na parte externa do túnel;</li>
+                    <li>Controle eletrônico de temperatura;</li>
+                    <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
+                    <P></P>
+                    <!--<a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>-->
+                    <!--END ESPECIFICAÇÕES-->
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/caalga/Conjunto Barra Seladora.jpg" alt="">
+                  <div>
+                    <h3>Especificações</h3>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <P></P>
+                    <!--<a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>-->
+                    <!--END ESPECIFICAÇÕES-->
+                  </div>
                 </div>
                 
 
-                <!-- ESPECIFICAÇÕES-->
+                <!-- RESPONSÁVEL -->
               </div>
-              <div class="swiper-pagination"></div>
+            <div class="swiper-pagination"></div>
             </div>
-            <div>
-              <h3>Especificações</h3>
-              <li>Túnel de encolhimento para 1.200 pacotes / hora;</li>
-              <li>Construção mista de aço carbono e aço inox;</li>
-              <li>Ordenador de garrafas automático na entrada da empacotadora;</li>
-              <li>Fácil regulagem para troca de fomratos;</li>
-              <li>01 turbina para circulação de ar forçado no túvel de encolhimento;</li>
-              <li>Fixação das resistências na parte externa do túnel;</li>
-              <li>Controle eletrônico de temperatura;</li>
-              <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
-              <P></P>
-              <!--<a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>-->
-              <!--END ESPECIFICAÇÕES-->
-
-
-            </div>
+            
           </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
