--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -347,7 +346,7 @@
                 <p></p>
                 <div class="portfolio-links">
                   <a href="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png"
-                    data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i
+                    data-gallery="portfolioGallery" class="portfolio-lightbox" title="Aplicador"><i
                       class="bx bx-plus"></i></a>
                   <a href="portfolio-details-insdustrial.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
