--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -38,15 +38,12 @@
   ======================================================== -->
 </head>
 
+<!-- ======= Header ======= -->
 <body>
-
-  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
       <div class="header-container d-flex align-items-center justify-content-between">
         <div class="logo">
-          <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
-          <!-- Uncomment below if you prefer to use an image logo -->
           <a href="index.html"><img src="assets/img/caalga/logo caalga pack.png" alt="" class="img-fluid"></a>
         </div>
 
@@ -57,13 +54,13 @@
             <li><a class="nav-link scrollto" href="#services">Serviços</a></li>
             <li><a class="nav-link scrollto" href="#portfolio">Empresas</a></li>
             <li><a class="nav-link scrollto" href="#team"></a></li>
+  </header>
+  <!-- End Header -->
 
-  </header><!-- End Header -->
 
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
+    <section id="breadcrumbs" class="breadcrumbs"> 
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
@@ -101,10 +98,9 @@
                     <li>Controle eletrônico de temperatura;</li>
                     <li>Sistema de resfriamento dos pacotes na saída do túnel com 01 ventilador;</li>
                     <P></P>
-                    <!--<a href="#about" class="btn-get-started scrollto">MANUAL DO USUÁRIO</a>-->
-                    <!--END ESPECIFICAÇÕES-->
                   </div>
                 </div>
+
 
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/Conjunto Barra Seladora.jpg" alt="">
@@ -122,20 +118,19 @@
                     <P></P>
                   </div>
                 </div>
-<!--END ESPECIFICAÇÕES-->
+                <!--END SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
+                <!-- ======= Portfolio Details Section ======= -->
 
                 <!-- RESPONSÁVEL -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
-
           </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Embaladoras</h3>
               <ul>
                 <li><strong>Responsável</strong>: Maurício C Gugelmin</li>
-
                 <li class strong>Telefone</strong>: <a href="https://api.whatsapp.com/send?phone=5545991126240"
                     class="btn-get-started scrollto"> (45) 99112-6240</a> </li>
                 <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
@@ -146,16 +141,14 @@
         </div>
       </div>
     </section><!-- End Portfolio Details Section -->
-
   </main><!-- End #main -->
+
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>CAALGA</h3>
             <p>
@@ -166,12 +159,10 @@
               <strong>Email:</strong> pcp1@caalga.com.br<br>
             </p>
           </div>
-
           <div class="container d-md-flex py-4">
-
             <div class="me-md-auto text-center text-md-start">
               <div class="copyright">
-                &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>Caalga</span></strong>. All Rights Reserved
               </div>
               <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
