--- a/portfolio-details-insdustrial.html
+++ b/portfolio-details-insdustrial.html
@@ -163,7 +163,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <img src="assets/img/caalga/caalga solucoes indutriais - cxa dado bier.png" alt="">
+                    <img src="assets/img/caalga/seladora.jpg" alt="">
                     <P></P>
                     <h3>Especificações</h3>
                     <li>TESTE</li>
