--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -84,7 +84,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga pack - embaladora.JPG" alt="">
+                  <img src="assets/img/pack/img_25-01-21-removebg-preview.png" alt="">
                   <P></P>
                   <div>
                     <P></P>
@@ -103,7 +103,58 @@
 
 
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/Conjunto Barra Seladora.jpg" alt="">
+                  <img src="assets/img/pack/Lateral-removebg-preview.png" alt="">
+                  <P></P>
+                  <div>
+                    <h3>Especificações</h3>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <P></P>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/pack/Barra_Seladora-removebg-preview.png" alt="">
+                  <P></P>
+                  <div>
+                    <h3>Especificações</h3>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <P></P>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/pack/Perspectiva-removebg-preview.png" alt="">
+                  <P></P>
+                  <div>
+                    <h3>Especificações</h3>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <li>TESTE</li>
+                    <P></P>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/pack/Superior-removebg-preview.png" alt="">
                   <P></P>
                   <div>
                     <h3>Especificações</h3>
