--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html lang="en">
+  <html lang="pt-br">
 
   <head>
     <meta charset="utf-8">
@@ -46,7 +46,9 @@
           <div class="logo">
             <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="assets/img/caalga/logo.png" alt="" class="img-fluid"></a>
+            <a href="index.html"><img src="assets/img/caalga/LOGOS VETORES (2).png" alt="" class="img-fluid"></a>
+         
+
           </div>
 
           <nav id="navbar" class="navbar">
