--- a/index.html
+++ b/index.html
@@ -174,10 +174,13 @@
 
     <!--CONTAINER ANIMATION-->
     <section id="video" class="video">
-      <div class="container">
-        <video autoplay width="420" height="250" controls>
-          <source src="./assets/img/caalga/Prévia de vídeo II1.mp4" type="video/mp4">
+      <div id="corpo">
+        <video controls autoplay loop>
+          <source src="./assets/img/caalga/Previa.mp4">
         </video>
+      <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
+        <div class="icon-box mt-4 mt-xl-0">
+        </div>
       </div>
     </section>
     <!--END CONTAINER ANIMATION-->
