--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
           <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
           <!-- Uncomment below if you prefer to use an image logo -->
           <a href="index.html"><img src="assets/img/caalga/LOGOS VETORES (2).png" alt="" class="img-fluid"></a>
-
-
         </div>
 
         <nav id="navbar" class="navbar">
@@ -60,7 +58,6 @@
             <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
             <li><a class="nav-link scrollto" href="#contact"></a></li>
           </ul>
-
           <i class="bi bi-list mobile-nav-toggle"></i>
       </div><!-- End Header Container -->
   </header><!-- End Header -->
@@ -71,21 +68,18 @@
     <div class="container text-center position-relative" data-aos="fade-in" data-aos-delay="200">
       <h2>Na Caalga você encontra os mais diversos tipos de produtos e serviços para o
         setor industrial.</h2>
-      <h2></h2>
+        <h2></h2>
       <a href="#about" class="btn-get-started scrollto">Conheça nossa empresa</a>
     </div>
   </section>
   <!-- End Hero -->
-
   <main id="main">
 
     <!-- ======= Clients Section ======= -->
 
     <!--<section id="clients" class="clients">
             <div class="container">
-            
               <div class="row">
-
                 <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center" data-aos="zoom-in" data-aos-delay="100">
                   <img src="assets/img/clients/Rc629e27026d4c37a49e618bcae7be335.png" class="img-fluid" alt="">
                 </div>
@@ -118,7 +112,6 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="row content justify-between">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
             <h2>A Caalga</h2>
@@ -172,18 +165,28 @@
 
 
 
-    <!--CONTAINER ANIMATION-->
-    <section id="video" class="video">
+    <!-- VÍDEO -->
+    <!--
+      <section id="video" class="video">
       <div id="corpo">
         <video controls autoplay loop>
           <source src="./assets/img/caalga/Previa.mp4">
         </video>
-      <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-        <div class="icon-box mt-4 mt-xl-0">
+        <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box mt-4 mt-xl-0">
+          </div>
         </div>
-      </div>
     </section>
-    <!--END CONTAINER ANIMATION-->
+  -->
+
+    <figure>
+      <video poster autoplay loop="videos/cover.jpg" controls>
+          <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
+      </video>
+  </figure>
+
+
+    <!-- END VÍDEO -->
 
 
 
@@ -200,7 +203,7 @@
                 engenheiros especializados na criação de produtos.
               </p>
               <div class="text-center">
-                <!--<a href="#" class="more-btn">Saiba mais <i class="bx bx-chevron-right"></i></a>-->
+                <!-- <a href="#" class="more-btn">Saiba mais <i class="bx bx-chevron-right"></i></a> -->
               </div>
             </div>
           </div>
@@ -242,16 +245,16 @@
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container">
-
         <div class="text-center" data-aos="zoom-in">
           <h3>Planejamento e qualidade</h3>
           <p> </p>
           <!--<a class="cta-btn" href="#">Call To Action</a>-->
         </div>
-
       </div>
     </section>
     <!-- End Cta Section -->
+
+
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services section-bg">
@@ -284,22 +287,19 @@
                 </div>
               </div>
 
-              <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
-                                      <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
-                                          <div class="icon"><i class="bx bx-tachometer"></i></div>
-                                          <h4><a href="">Peças sob medida</a></h4>
-                                          <p>Desenvolvemos peças e máquianas de acordo com suas necessidades</p>
-                                      </div>
-                                  </div>
-
-                                  <div class="col-md-6 d-flex align-items-stretch mt-4">
-                                      <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
-                                          <div class="icon"><i class="bx bx-world"></i></div>
-                                          <h4><a href="">Fundição </a></h4>
-                                          <p>Produzimos inúmeras peças através da fundição de metais</p>
-                                      </div>
-                                  </div>
-                                -->
+    <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
+        div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+          <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <h4><a href="">Peças sob medida</a></h4>
+              <p>Desenvolvemos peças e máquianas de acordo com suas necessidades</p>
+                <div class="col-md-6 d-flex align-items-stretch mt-4">
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="400">
+                <div class="icon"><i class="bx bx-world"></i></div>
+                      <h4><a href="">Fundição </a></h4>
+                        <p>Produzimos inúmeras peças através da fundição de metais</p>
+                      </div>
+                    </div>
+                  -->
             </div>
           </div>
         </div>
@@ -582,7 +582,6 @@
               <p>Estamos prontos para atende-lo!</p>
             </div>
           </div>
-
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
             <iframe style="border:0; width: 100%; height: 270px;"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3624.458804040343!2d-53.7228351850002!3d-24.711124284124576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94f3be46214c8ae1%3A0x73a748197c84837d!2sCaalga%20Solu%C3%A7%C3%B5es%20Industriais%20Eireli%20ME!5e0!3m2!1spt-BR!2sbr!4v1614905496708!5m2!1spt-BR!2sbr"
@@ -608,7 +607,6 @@
                 </div>
               </div>
             </div>
-
             <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -634,19 +632,18 @@
             </form>
           </div>
         </div>
-
       </div>
     </section>
     <!-- End Contact Section -->
   </main>
   <!-- End #main -->
+
+
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Caalga</h3>
             <p>
@@ -691,7 +688,6 @@
           </div>
         -->
           <div class="container d-md-flex py-4">
-
             <div class="me-md-auto text-center text-md-start">
               <div class="copyright">
                 &copy; Copyright <strong><span>Caalga</span></strong>. All Rights Reserved
@@ -713,8 +709,9 @@
             </div>
           </div>
   </footer>
-  <!-- End Footer -->
+  l
 
+  <!-- End Footer -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
