--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container text-center position-relative" data-aos="fade-in" data-aos-delay="200">
       <h2>Na Caalga você encontra os mais diversos tipos de produtos e serviços para o
         setor industrial.</h2>
-        <h2></h2>
+      <h2></h2>
       <a href="#about" class="btn-get-started scrollto">Conheça nossa empresa</a>
     </div>
   </section>
@@ -181,9 +181,13 @@
 
     <figure>
       <video poster autoplay loop="videos/cover.jpg" controls>
-          <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
+        <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
+        <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="icon-box mt-4 mt-xl-0">
+          </div>
+        </div>
       </video>
-  </figure>
+    </figure>
 
 
     <!-- END VÍDEO -->
@@ -287,7 +291,7 @@
                 </div>
               </div>
 
-    <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
+              <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
         div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon"><i class="bx bx-tachometer"></i></div>
             <h4><a href="">Peças sob medida</a></h4>
