--- a/index.html
+++ b/index.html
@@ -182,14 +182,12 @@
     <figure>
       <video poster autoplay loop="videos/cover.jpg" controls>
         <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
-        <div class="col-xl-4 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+        <div class="poster" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon-box mt-4 mt-xl-0">
           </div>
         </div>
       </video>
     </figure>
-
-
     <!-- END VÍDEO -->
 
 
