--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -186,6 +186,8 @@
                 <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
               </ul>
             </div>
+            <p></p>
+            <button type="button" class="btn btn-primary btn-sm">SOLICITAR ORÇAMENTO</button>
           </div>
         </div>
       </div>
