--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
       <video poster autoplay loop="videos/cover.jpg" controls>
         <source src="./assets/img/caalga/Previa.mp4" type="video/mp4" />
         <div class="poster" data-aos="zoom-in" data-aos-delay="100">
-          <div class="icon-box mt-4 mt-xl-0">
-          </div>
+        </div>
         </div>
       </video>
     </figure>
@@ -710,8 +709,16 @@
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
+
+          <span class="copyright">
+            Desenvolvido por
+            <a href="http://w.visao" target="_blank">
+                <img src="./assets/img/caalga/logo torange.png" alt="Logo Torange" style="width: 75px;position: relative;top: -5px;margin: 0 2px;">
+            </a>
+            .
+        </span>
   </footer>
-  l
+
 
   <!-- End Footer -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
