--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -39,7 +39,6 @@
 </head>
 
 <!-- ======= Header ======= -->
-
 <body>
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -59,8 +58,8 @@
   <!-- End Header -->
 
 
+  <!-- ======= Breadcrumbs ======= -->
   <main id="main">
-    <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
@@ -73,7 +72,8 @@
         </div>
       </div>
     </section>
-    <!--------- End Breadcrumbs ----------->
+     <!-- ======= End Breadcrumbs ======= -->
+
 
     <!--SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
     <!-- ===================================== Portfolio Details Section ======================================== -->
@@ -84,7 +84,7 @@
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-
+                  
                   <img src="assets/img/pack/img_25-01-21-removebg-preview.png" alt="">
                   <P></P>
                   <div>
@@ -169,11 +169,10 @@
                     <P></P>
                   </div>
                 </div>
-                <!--END SLIDER DE FOTOS E DESCRIÇÃO DOS PRODUTOS-->
+                <!-- ===================================== End Portfolio Details Section ======================================== -->
 
 
-                <!-- ======= Portfolio Details Section ======= -->
-                <!-- RESPONSÁVEL -->
+                <!-- ======= Reponsável ======= -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -184,9 +183,9 @@
               <ul>
                 <li><strong>Responsável</strong>: Maurício C Gugelmin</li>
                 <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
-                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
               </ul>
             </div>
+            <!-- ======= End Reponsável ======= -->
 
 
             <!--BUTTON SOLICITAR ORÇAMENTO VIA WHATSAPP-->
@@ -195,8 +194,9 @@
                 <div class="addCartBtn">
                   <div class="input-group">
                     <span class="input-group-btn">
-                      <button id="addToCartBtn" class="btn btn-success"> <a href="https://api.whatsapp.com/send?phone=5545991126240"
-                    class="btn-get-started scrollto"><i class="fa fa-check-circle"></i>SOLICITAR ORÇAMENTO VIA WHATSAPP</button>
+                      <button id="addToCartBtn" class="btn btn-success"> <a
+                          href="https://api.whatsapp.com/send?phone=5545991126240" class="btn-get-started scrollto"><i
+                            class="fa fa-check-circle"></i>SOLICITAR ORÇAMENTO VIA WHATSAPP</button>
                     </span>
                   </div>
                 </div>
@@ -205,11 +205,9 @@
         </div>
       </div>
     </section>
-    <!-- End Portfolio Details Section -->
-  </main><!-- End #main -->
+  </main>
+  <!--END BUTTON SOLICITAR ORÇAMENTO VIA WHATSAPP-->
 
-
-  <!--END BUTTON SOLICITAR ORÇAMENTO-->
 
 
   <!-- ======= Footer ======= -->
@@ -227,11 +225,13 @@
               <strong>Email:</strong> pcp1@caalga.com.br<br>
             </p>
           </div>
+
           <div class="container d-md-flex py-4">
             <div class="me-md-auto text-center text-md-start">
               <div class="copyright">
                 &copy; Copyright <strong><span>Caalga</span></strong>. All Rights Reserved
               </div>
+
               <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you purchased the pro version. -->
@@ -240,6 +240,7 @@
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
               </div>
             </div>
+
             <div class="social-links text-center text-md-right pt-3 pt-md-0">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -248,11 +249,12 @@
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- ======= End Footer ======= -->
+
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
